@@ -41,6 +41,7 @@ typedef enum {
     H2_CONF_PUSH,
     H2_CONF_PUSH_DIARY_SIZE,
     H2_CONF_COPY_FILES,
+    H2_CONF_EARLY_HINTS,
 } h2_config_var_t;
 
 struct apr_hash_t;
@@ -77,6 +78,7 @@ typedef struct h2_config {
     int push_diary_size;          /* # of entries in push diary */
     int copy_files;               /* if files shall be copied vs setaside on output */
     apr_array_header_t *push_list;/* list of h2_push_res configurations */
+    int early_hints;              /* support status code 103 */
 } h2_config;
 
 
